[package]
name = "swap_in_jupiter_router"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bincode = "1.3"
itertools = "0.14.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2"
bs58 = '0.5.1'
anyhow = "1.0.44"
tokio = { version = "1", features = ["full"] }
solana-client = "2.2.0"
spl-token = "7.0.0"
solana-sdk = "2.2.1"
spl-token-client = "0.14.0"
spl-associated-token-account = "6.0.0"
dotenv = "0.15.0"
